--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -210,7 +210,7 @@
     
     <div class="rolling-text-container">
         <div class="rolling-text" style="padding-top: 10px;">
-            <b>Note:</b> Please watch the <a href = "https://www.youtube.com" target="_blank" rel="noopener noreferrer">tutorial video</a> on how to use the Life Cycle Costing Tool before proceeding further.</p>
+            <b>Note:</b> Please watch the <a href = "https://www.youtube.com/watch?v=5CLx7akEhsw" target="_blank" rel="noopener noreferrer">tutorial video</a> on how to use the Life Cycle Costing Tool before proceeding further.</p>
         </div>
     </div>
     </div>
@@ -345,7 +345,7 @@
                                 <input class='inp_box' type='number' id='rate1' name='rate1' step='0.01' min = '0' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rep_yr1' name='rep_yr1' step='0.5' value ='0.5'>
+                                <input class='inp_box' type='number' id='rep_yr1' name='rep_yr1' step='0.5' value =''>
                             </td>
                         </tr>
                         <tr>
@@ -356,7 +356,7 @@
                                 <input class='inp_box' type='number' id='rate2' name='rate2' step='0.01'  min = '0' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rep_yr2' name='rep_yr2' step='0.5' value ='0.5'>
+                                <input class='inp_box' type='number' id='rep_yr2' name='rep_yr2' step='0.5' value =''>
                             </td>
                         </tr>
                         <tr>
@@ -367,7 +367,7 @@
                                 <input class='inp_box' type='number' id='rate3' name='rate3' step='0.01'  min = '0' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rep_yr3' name='rep_yr3' step='0.5' value ='0.5'>
+                                <input class='inp_box' type='number' id='rep_yr3' name='rep_yr3' step='0.5' value =''>
                             </td>
                         </tr>
                         <tr>
@@ -378,7 +378,7 @@
                                 <input class='inp_box' type='number' id='rate4' name='rate4' step='0.01' min = '0' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rep_yr4' name='rep_yr4' step='0.5' value ='0.5'>
+                                <input class='inp_box' type='number' id='rep_yr4' name='rep_yr4' step='0.5' value =''>
                             </td>
                         </tr>
                         <tr >
@@ -389,7 +389,7 @@
                                 <input class='inp_box' type='number' id='rate5' name='rate5' step='0.01'  min = '0' value=''>
                             </td>
                             <td style="padding-bottom: 10px;">
-                                <input class='inp_box' type='number' id='rep_yr5' name='rep_yr5' step='0.5' value ='0.5'>
+                                <input class='inp_box' type='number' id='rep_yr5' name='rep_yr5' step='0.5' value =''>
                             </td>
                         </tr>
                     </table>
