--- a/Tool_2_DST.html
+++ b/Tool_2_DST.html
@@ -139,7 +139,7 @@
         <h3><b>Technology Selection Tool </b></h3>
         <div class="rolling-text-container">
         <div class="rolling-text" style="padding-top: 10px;">
-        	<b>Note:</b> Please watch the <a href = "https://www.youtube.com" target="_blank" rel="noopener noreferrer">tutorial video</a> on how to use the Technology Selection Tool before proceeding further.</p>
+        	<b>Note:</b> Please watch the <a href = "https://www.youtube.com/watch?v=FbMT2KAtsSM" target="_blank" rel="noopener noreferrer">tutorial video</a> on how to use the Technology Selection Tool before proceeding further.</p>
         </div>
     </div>
     </div>
