--- a/tutorial.html
+++ b/tutorial.html
@@ -11,8 +11,12 @@
 	</style>
 </head>
 <body>
-	<iframe width="420" height="236.25" src="https://www.youtube.com/embed/_-5IYUbXozY" frameborder="0" allowfullscreen></iframe>
-	<iframe width="420" height="236.25" src="https://www.youtube.com/embed/_-5IYUbXozY" frameborder="0" allowfullscreen></iframe>
-
+	<center>
+	<iframe width="420" height="236.25" src="https://www.youtube.com/embed/eHfCOGoZ5AM" frameborder="0" allowfullscreen></iframe>
+	<iframe width="420" height="236.25" src="https://www.youtube.com/embed/5CLx7akEhsw" frameborder="0" allowfullscreen></iframe>
+		<br>
+	<iframe width="420" height="236.25" src="https://www.youtube.com/embed/FbMT2KAtsSM" frameborder="0" allowfullscreen></iframe>
+	<iframe width="420" height="236.25" src="https://www.youtube.com/embed/2bbKtjvD3l8" frameborder="0" allowfullscreen></iframe>
+	</center>
 </body>
 </html>
