--- a/Load_page.html
+++ b/Load_page.html
@@ -384,7 +384,7 @@
     The figure represents the decision-making framework for technology selection adopted in the decision support tool. 
     </p>
     <center>
-    <img src='images/DMF_fig1.png' alt='Image' >
+    <img src='images/DMF_fig1.png' alt='Image' width='900px'>
     <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;">Source: Kalbar and Lokhande (2023) </figcaption>
     </center>
     <p align='justify' style='font-size: 20px; line-height:1.5; border: none;'>
@@ -414,7 +414,7 @@
     <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;">Source: Kalbar and Lokhande (2023) </figcaption>
     </center>
     <p align='justify' style='font-size: 20px; line-height:1.5; border: none;'>
-  The data collection for 11 technologies will be carried out through primary data collection, site visits, questionnaires and surveys. Additionally, secondary data from literature review will also be resorted to for preparing the technology factsheets. A dynamic life cycle costing module is developed for representative analysis of life cycle costs through the net present worth of the present as well as future investments.
+  Data collection for the technology options under consideration should be carried out through site visits, questionnaires or surveys. Expert opinions can be considered for comparing technologies with respect to qualitative criteria i.e. the indicators which are represented on a scale of 1 to 100. A dynamic life cycle costing module is developed for representative analysis of life cycle costs through the net present worth of the present as well as future investments.
   <br><br>
   <b>Multi-attribute decision-making</b><br>
   The MADM method used in the decision support tool is TOPSIS. The method is based on a compensatory approach and utility is estimated by comparing each alternative directly depending on data in the decision matrices and weights. The method assumes that each attribute has amonotonically increasing or decreasing utility. The best alternative is identified by considering both thepositive ideal solution and negative ideal solution. The disadvantage or unfavourable value in one attribute is offset byan advantage or favourable value in some other attribute. This mimics human thinking where humans always think of both positive and negative qualities of the alternativeto choose thebestavailable optionamongall. The geometric concept of distance measurement is used in TOPSIS as aproxyforhumanpreference, which is a suitable approach for the decision-making with regard to wastewater management.The advantages of TOPSIS over other MADM techniques are:
