--- a/Tool_2_DST.html
+++ b/Tool_2_DST.html
@@ -13,7 +13,10 @@
         .inhide:target {
             display: block;
         }
-
+	.td1_text{
+                
+            font-size: 12px; 
+        }
         .td_text{
             font-family: sans-serif;
             font-size: 12px; 
@@ -155,7 +158,7 @@
     			<td  style="width: 235px; ">
 				    <div>
 				    	<h5>1. Economic Indicators</h5>
-				        <input type="checkbox" name="indicate[]" value="Capex">Construction Cost <br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(INR/MLD)<br/>
+				        <input type="checkbox" name="indicate[]" value="Capex" class="td1_text"><b>Construction Cost </b><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(INR/MLD)<br/>
 				        <input type="checkbox" name="indicate[]" value="Opex">O&M Cost <br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(INR/MLD/Year)<br/>
 				        <input type="checkbox" name="indicate[]" value="Revenue">Revenue Generation <br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(INR/MLD/Year)<br/>
 				        <input type="checkbox" name="indicate[]" value="LCC">Net Present Worth <br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(INR/MLD)<br/>
