--- a/Tool_2_DST.html
+++ b/Tool_2_DST.html
@@ -159,7 +159,7 @@
 				    <div>
 				    	<h5>1. Economic Indicators</h5>
 				        <input type="checkbox" name="indicate[]" value="Capex" class="td1_text"><b>Construction Cost </b><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(INR/MLD)<br/>
-				        <input type="checkbox" name="indicate[]" value="Opex" class="td1_text"><b>O&M Cost <br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(INR/MLD/Year)<br/>
+				        <input type="checkbox" name="indicate[]" value="Opex" class="td1_text"><b>O&M Cost</b> <br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(INR/MLD/Year)<br/>
 				        <input type="checkbox" name="indicate[]" value="Revenue"class="td1_text"><b>Revenue Generation </b><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(INR/MLD/Year)<br/>
 				        <input type="checkbox" name="indicate[]" value="LCC"class="td1_text"><b>Net Present Worth </b><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(INR/MLD)<br/>
 				        <input type="hidden" name="num_textboxes" value="0" />
