--- a/Load_page.html
+++ b/Load_page.html
@@ -191,38 +191,38 @@
     <br>
     <b>Decision-making:</b>
     <br>
-    1. <a href='PDFs/dec_mak_1.pdf' target='_BLANK'>Technology assessment for wastewater treatment using multiple-attribute decision-making</a> 
+    1. <a href='PDFs/1_Preprint_Techno in Society_2012.pdf' target='_BLANK'>Technology assessment for wastewater treatment using multiple-attribute decision-making</a> 
     <br>
-    2. <a href='PDFs/dec_mak_2.pdf' target='_BLANK'>Selection of an appropriate wastewater treatment technology: A scenario-based multiple-attribute decision-making approach</a> 
-    <br>
-    3. <a href='PDFs/dec_mak_3.pdf' target='_BLANK'>Assessment of wastewater treatment technologies: life cycle approach</a>
+    2. <a href='PDFs/2_Preprint version_JEMA_2012.pdf' target='_BLANK'>Selection of an appropriate wastewater treatment technology: A scenario-based multiple-attribute decision-making approach</a> 
+    <!--br>
+    <3. <a href='PDFs/dec_mak_3.pdf' target='_BLANK'>Assessment of wastewater treatment technologies: life cycle approach</a>
     <br>
     4. <a href='PDFs/dec_mak_4.pdf' target='_BLANK'>The influence of expert opinions on the selection of wastewater treatment alternatives: A group decision-making approach</a>
     <br>
     5. <a href='PDFs/dec_mak_5.pdf' target='_BLANK'>Life cycle-based environmental assessment of municipal wastewater treatment plant in India</a>
     <br>
-    6. <a href='PDFs/dec_mak_6.pdf' target='_BLANK'>Life cycle-based decision support tool for selection of wastewater treatment alternatives</a>
+    6. <a href='PDFs/dec_mak_6.pdf' target='_BLANK'>Life cycle-based decision support tool for selection of wastewater treatment alternatives</a-->
     <br>
     <br>
     <b>Circular Economy in Water Sector:</b>
     <br>
-    7. <a href='PDFs/cir_eco_1.pdf' target='_BLANK'>Review of Circular Economy in urban water sector: Challenges and opportunities in India</a>
+    3. <a href='PDFs/3_Preprint_CE in water_2020.pdf' target='_BLANK'>Review of Circular Economy in urban water sector: Challenges and opportunities in India</a>
     <br>
-    8. <a href='PDFs/cir_eco_2.pdf' target='_BLANK'>Measuring urban water circularity: Development and implementation of a Water Circularity Indicator</a>
+    4. <a href='PDFs/4_Preprint_WCI_2022.pdf' target='_BLANK'>Measuring urban water circularity: Development and implementation of a Water Circularity Indicator</a>
     <br>
     <br>
     <b>Natural Treatment Systems:</b>
     <br>
-    9. <a href='PDFs/nat_tre_sys_1.pdf' target='_BLANK'>Hybrid treatment systems: a paradigm shift to achieve sustainable wastewater treatment and recycling in India</a>
+    5. <a href='PDFs/5_Preprint-version__HTS_2021.pdf' target='_BLANK'>Hybrid treatment systems: a paradigm shift to achieve sustainable wastewater treatment and recycling in India</a>
     <br>
-    10. <a href='PDFs/nat_tre_sys_2.pdf' target='_BLANK'>Need for Adopting Hybrid Treatment Systems to Reduce O&M Costs of Sewage Treatment and Recycling in India</a>
+    6. <a href='PDFs/6_Preprint_HTS LCC_IWWA.pdf' target='_BLANK'>Need for Adopting Hybrid Treatment Systems to Reduce O&M Costs of Sewage Treatment and Recycling in India</a>
     <br>
     <br>
     <b>Scaled Decentralization:</b>
     <br>
-    11. <a href='PDFs/sca_dec_1.pdf' target='_BLANK'>Need to adopt scaled decentralized systems in the water infrastructure to achieve sustainability and build resilience</a>
+    7. <a href='PDFs/7_Preprint_SDS_2023.pdf' target='_BLANK'>Need to adopt scaled decentralized systems in the water infrastructure to achieve sustainability and build resilience</a>
     <br>
-    12. <a href='PDFs/sca_dec_2.pdf' target='_BLANK'>Economic Assessment of Centralized and Decentralized Sewerage Network Systems: A Case Study of Ludhiana, India</a>
+    8. <a href='PDFs/8_Preprint_JUPD_2023.pdf' target='_BLANK'>Economic Assessment of Centralized and Decentralized Sewerage Network Systems: A Case Study of Ludhiana, India</a>
     </p>
   </div>
 
